--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,15 +15,13 @@ dependencies = [
   "ezdxf>=1.0",
   "shapely>=2.0",
   "pyclipper>=1.3",
+  "PyYAML>=6.0",
   "jsonschema>=4.22",
   "numpy>=1.26",
 ]
 
 [project.scripts]
 pl = "engine.cli.main:app"
-
-[tool.setuptools.package-data]
-patternlab = ["schemas/*.json", "recipes/*.yml", "blocks/**/*.json"]
 
 [tool.setuptools.packages.find]
 where = ["."]
