--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
   "numpy>=1.26",
 ]
 
+[project.optional-dependencies]
+test = ["pytest>=8.0"]
+
+
 [project.scripts]
 pl = "engine.cli.main:app"
 
